--- a/styles.css
+++ b/styles.css
@@ -274,7 +274,7 @@ h3 {
     font-size: 21px;
     color: rgb(255, 255, 255);
     position: relative;
-    left: 219px;
+    /* left: 219px; */
     bottom: 151px;
     /* display: flex; */
 }
@@ -300,7 +300,7 @@ h3 {
     width: 221px;
     height: 43px;
     left: 50%;
-    transform: translateX(50%);
+    transform: translateX(-50%);
     bottom: 70px;
     border-radius: 13px;
 }
@@ -638,12 +638,16 @@ h3 {
     }
 
     .card {
-        width: 100%;
+        width: 90%;
     }
 
     .brand-image {
         width: 120px;
         height: 80px;
+    }
+
+    .featured-brands{
+        display: none;
     }
 
     .find-medicines input[type="text"] {
@@ -736,6 +740,7 @@ h3 {
     .brand-image {
         width: 200px;
         height: 120px;
+        margin-bottom: 50px;
     }
 
     .back-grey {
